* Tue Jan 23 2007 Jesse Keating <jkeating@redhat.com>
- Now use a manifest to determine what to pull in, not comps itself
- Add a minimal-manifest for test composes
- Add current F7 comps file for test composes
- Use some anaconda code to depsolve, gets better (and more common) results
- Bump the iso size to what was used in FC6

* Wed Jan 17 2007 Jesse Keating <jkeating@redhat.com>
- Move splittree workdirs into work/ at the end of the run

* Tue Jan 16 2007 Jesse Keating <jkeating@redhat.com>
- Remove our splittree for rawhide
- Remove old main() sections from pungi.py and gather.py
- Require yum 3.0.3 or newer
- Add rescueCD support

* Wed Dec 13 2006 Jesse Keating <jkeating@redhat.com>
- Fix a bug in DVD repodata
- Add correct ppc boot args
- Set ppc arch correctly

* Mon Dec 11 2006 Jesse Keating <jkeating@redhat.com>
- Now able to get release note files from release note packages.
- Add a config file for the source run

* Sat Dec  9 2006 Jesse Keating <jkeating@redhat.com>
- Now able to do srpms, lots of changes

* Fri Nov 17 2006 Jesse Keating <jkeating@redhat.com>
- First pass at a config file, lots of changes

* Wed Nov  8 2006 Jesse Keating <jkeating@redhat.com>
- Shuffle things around for dist-utils
- Add setup.py and such to do installs

* Tue Nov  7 2006 Jesse Keating <jkeating@redhat.com>
- pungi.py
    Turn on split repo creation
    Add iso creation code
    Add DVD creation code
- __init.py__
    Turn on split repo creation
    Turn on iso creation

* Mon Nov  6 2006 Jesse Keating <jkeating@redhat.com>
- pungi.py
    use splittree.py as a module rather than a script
    use same layout as current fedora trees
- gather.py
    use same layout as current fedora trees

* Wed Nov  1 2006 Jesse Keating <jkeating@redhat.com>
- First changelog entry
- pungi.py
    Code up splittree, use our own for now with patches
    Code up createSplitRepodata
- Now able to create installable tree and create split CD dirs suitable for 
  mkisofs