@@ -1,7 +1,7 @@
 %{!?python_sitelib: %define python_sitelib %(%{__python} -c "from distutils.sysconfig import get_python_lib; print get_python_lib()")}
 
 Name:           pungi
-Version:        0.2.0
+Version:        0.2.1
 Release:        1%{?dist}
 Summary:        Distribution compose tool
 
@@ -46,6 +46,10 @@ rm -rf $RPM_BUILD_ROOT
 
 
 %changelog
+* Wed Jan 24 2007 Jesse Keating <jkeating@redhat.com> - 0.2.1-1
+- Add a "flavor" option (such as Desktop)
+- Move packageorder file into workdir
+
 * Wed Jan 24 2007 Jesse Keating <jkeating@redhat.com> - 0.2.0-1
 - Now use a manifest to determine what to pull in, not comps itself
 - Add a minimal-manifest for test composes
